# lab_aaa

./: docker-compose.yml  pyproject.toml
mongo/: Dockerfile
src/: Dockerfile
src/app/: main.py  utils.py
src/app/core/: database.py
src/app/domain/: user.py
src/app/repository/: user.py
src/app/service/: user.py
src/app/transport/rest/: users.py
